fixed double scrollbar on work page

--- a/static/less/modules/work.less
+++ b/static/less/modules/work.less
@@ -127,7 +127,8 @@
 }
 
 .pop {
-    height: 0;
+    // height: 0;
+    max-height: 0;
     width: 100%;
     margin: 0 -10000px 0 -10000px;
     padding: 0 10000px;
@@ -138,13 +139,14 @@
     .transition(all 1s ease);
 
     &.pop-open {
-        height: 750px;
+        // height: 750px;
+        max-height: 1000px;
         margin-bottom: 40px;
 
         .pop-content{
             .opacity(100);
             .translate(0, 0);
-            padding: 50px 0 20px 0;
+            padding: 30px 0;
         }
 
         .pop-close {
@@ -198,7 +200,12 @@
 
         a {
             color: @bg_grey;
+            text-decoration: none;
             .transition(color 0.25s ease);
+
+            &:after {
+                display: none;
+            }
 
             &:hover {
                 color: @blue;
